
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct arg {int width; } ;


 double FILTER_WIDTH ;
 int INSIDE ;
 int OUTSIDE ;
 scalar_t__ square_check_line (struct arg const*,double,double,double) ;

__attribute__((used)) static int
check_square(const struct arg *arg, double x, double y)
{


   double w = arg->width/2;

   if (square_check_line(arg, x, y, w+FILTER_WIDTH) == 0)
   {



      w -= FILTER_WIDTH;

      if (w > 0 && square_check_line(arg, x, y, w) == 0)
         return INSIDE;


      return 0;
   }

   else
      return OUTSIDE;
}
